name:          pipes-bytestring
version:       0.1.0
category:      Control, Pipes, Proxies
synopsis:      Handling ByteString streams
maintainer:    Ertugrul Söylemez <es@ertes.de>
author:        Ertugrul Söylemez <es@ertes.de>
copyright:     (c) 2013 Ertugrul Söylemez
license:       BSD3
license-file:  LICENSE
build-type:    Simple
cabal-version: >= 1.10
extra-source-files: README.md
description:
    This library implements handling ByteString streams.

Source-repository head
    type:     git
    location: git://github.com/ertes/pipes-bytestring.git

library
    build-depends:
        base >= 4.5 && < 5
    default-language: Haskell2010
    default-extensions:
    ghc-options: -W
    exposed-modules:
        Control.Proxy.ByteString
        Control.Proxy.ByteString.List

test-suite doctest
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.5 && < 5,
        doctest
    default-language: Haskell2010
    hs-source-dirs: test
    main-is: DocTest.hs

test-suite tests
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.5 && < 5,
        pipes-bytestring,
        smallcheck,
        test-framework,
        test-framework-smallcheck,
        test-framework-th
    default-language: Haskell2010
    default-extensions:
        TemplateHaskell
    ghc-options: -W -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs: test
    main-is: Props.hs

test-suite pipes-bytestring-test
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.5 && < 5,
        pipes-bytestring
    default-language: Haskell2010
    default-extensions:
    ghc-options: -W -threaded -rtsopts
    hs-source-dirs: test
    main-is: Test.hs

benchmark bench
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.5 && < 5,
        criterion,
        pipes-bytestring
    default-language: Haskell2010
    default-extensions:
    ghc-options: -W -threaded -rtsopts
    hs-source-dirs: test
    main-is: Bench.hs
